--- a/Shape_Matching_AMK.ipynb
+++ b/Shape_Matching_AMK.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "# File Path\n",
-    "reference_dir = r'D:\\\\MSc Statistics SPPU\\\\IISER\\\\Images\\\\Generalized'\n",
+    "reference_dir = Path,
     "reference_files = ['A.png', 'B.png', 'C.png', 'D.png', 'E.png']\n",
     "test_image_file = 'testD.png'\n",
     "\n",
